--- a/client/index.html
+++ b/client/index.html
@@ -8,16 +8,16 @@
     <title>Pong</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
-    <div class="game-background">
+    <div id="game-background">
         <div id="player-left" class="racket"></div>
         <div id="player-right" class="racket"></div>
         <div id="ball"></div>
     </div>
-    <button onclick="moveRacket('right')">TESTE</button>
+    <button>PLAY</button>
 </body>
 
+<script src="script.js"></script>
 </html>
