move physics to server side

--- a/client/index.html
+++ b/client/index.html
@@ -15,15 +15,11 @@
         integrity="sha512-rsntMCBgWYEWKl4HtqWmQ3vdHgvSq8CTtJd19YL7lCtKokLPWt7UEoHVabK1uiNfUdaLit8O090no5BZjcz+bw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="script.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- <div id="game-background">
-        <div id="player-left" class="racket"></div>
-        <div id="player-right" class="racket"></div>
-        <div id="ball"></div>
-    </div>
-    <button id="playButton">PLAY</button> -->
+    <canvas id="background"></canvas>
 </body>
 
 </html>
