--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,10 @@
 
 <body>
     <canvas id="background"></canvas>
+    <div class="score">
+        <div id="score-left" style="color: red;">Red: 0</div>
+        <div id="score-right" style="color: blue; margin-left: auto;;">Blue: 0</div>
+    </div>
 </body>
 
 </html>
